<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    ifroom untuk menampilkan icon-->
<!--    jika never maka akan menampilkan tirple dot-->
<!--    menu hanya terdiri dairi tiga button-->

<!--    // button search-->
    <item android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

<!--    // button filter-->
    <item android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom"
        android:title="@string/sort">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/sort_by">
                    <item
                        android:id="@+id/menu_priority_high"
                        android:title="@string/priority_high"/>
                    <item
                        android:id="@+id/menu_priority_low"
                        android:title="@string/priority_low"/>
                </item>
            </group>
        </menu>
    </item>

<!--    jika showAsAction never artinya ia tidak akan ditampilkan, jika always maka akan selalu ditampilkan -->
    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"
        android:icon="@drawable/ic_delete"/>
</menu>